--- a/website/content/docs/guides/minimal-setup.mdx
+++ b/website/content/docs/guides/minimal-setup.mdx
@@ -3,9 +3,8 @@ title: Minimal Setup
 description: How to set up Panda with the bare minimum.
 ---
 
-# Minimal Setup
-
-The default Panda setup includes utilities and design tokens by default. In this guide, you'll see how to strip out the defaults and start from scratch.
+The default Panda setup includes utilities and design tokens by default. In this guide, you'll see how to strip out the
+defaults and start from scratch.
 
 ## Removing default tokens
 
@@ -37,7 +36,8 @@ export default defineConfig({
 
 Use the `eject: true` property to remove all the default utilities.
 
-Panda doesn't automatically know which tokens are valid for which CSS properties, so it is necessary to tell Panda that my tokens from the "colors" category are valid for the CSS property "color".
+Panda doesn't automatically know which tokens are valid for which CSS properties, so it is necessary to tell Panda that
+my tokens from the "colors" category are valid for the CSS property "color".
 
 ```js
 export default defineConfig({
@@ -64,7 +64,8 @@ This makes `<p className={css({ color: 'primary' })}> Text </p>` work as expecte
 
 Panda offers 2 presets:
 
-- `@pandacss/preset-base`: This is a relatively unopinionated set of utilities for mapping CSS properties to values (almost everyone will want these)
+- `@pandacss/preset-base`: This is a relatively unopinionated set of utilities for mapping CSS properties to values
+  (almost everyone will want these)
 
 You can use these presets by installing them via npm and adding them to your `presets` key:
 
@@ -75,7 +76,8 @@ export default defineConfig({
 })
 ```
 
-- `@pandacss/preset-panda` as an opinionated set of tokens if you don't want to define your own colors/spacing/fonts etc.
+- `@pandacss/preset-panda` as an opinionated set of tokens if you don't want to define your own colors/spacing/fonts
+  etc.
 
 ```js
 export default defineConfig({
@@ -84,4 +86,5 @@ export default defineConfig({
 })
 ```
 
-> Note: You don't need to install `@pandacss/preset-base` or `@pandacss/preset-panda`. Panda will automatically resolve them for you.
+> Note: You don't need to install `@pandacss/preset-base` or `@pandacss/preset-panda`. Panda will automatically resolve
+> them for you.
