--- a/website/content/docs/concepts/writing-styles.mdx
+++ b/website/content/docs/concepts/writing-styles.mdx
@@ -3,17 +3,19 @@ title: Writing Styles
 description: Panda generates the utilities you need to style your components with confidence.
 ---
 
-# Writing Styles
-
-Using the object syntax is a fundamental approach to writing styles in Panda. It not only provides a type-safe style authoring experience, but also improves readability and ensures a consistent experience with style overrides.
+Using the object syntax is a fundamental approach to writing styles in Panda. It not only provides a type-safe style
+authoring experience, but also improves readability and ensures a consistent experience with style overrides.
 
 ## Atomic Styles
 
-When you write styles in Panda, it generates a modern atomic stylesheet that is automatically scoped to the `@layer utilities` cascade layer.
+When you write styles in Panda, it generates a modern atomic stylesheet that is automatically scoped to the
+`@layer utilities` cascade layer.
 
-The atomic stylesheets approach offers several advantages, such as improved code maintainability and reusability, as well as a smaller overall CSS footprint.
+The atomic stylesheets approach offers several advantages, such as improved code maintainability and reusability, as
+well as a smaller overall CSS footprint.
 
-Panda exposes a `css` function that can be used to author styles. It accepts a style object and returns a className string.
+Panda exposes a `css` function that can be used to author styles. It accepts a style object and returns a className
+string.
 
 ```jsx
 import { css } from '../styled-system/css'
@@ -57,9 +59,11 @@ The styles generated at build time end up like this:
 
 ### Shorthand Properties
 
-Panda provides shorthands for common css properties to help improve the speed of development and reduce the visual density of your style declarations.
+Panda provides shorthands for common css properties to help improve the speed of development and reduce the visual
+density of your style declarations.
 
-Properties like `borderRadius`, `backgroundColor`, and `padding` can be swapped to their shorthand equivalent `rounded`, `bg`, and `p`.
+Properties like `borderRadius`, `backgroundColor`, and `padding` can be swapped to their shorthand equivalent `rounded`,
+`bg`, and `p`.
 
 ```jsx
 import { css } from '../styled-system/css'
@@ -81,11 +85,14 @@ const styles = css({
 })
 ```
 
-> Shorthands are documented alongside their respective properties in the [utilities](/docs/utilities/background) section.
+> Shorthands are documented alongside their respective properties in the [utilities](/docs/utilities/background)
+> section.
 
 ### Type safety
 
-Panda is built with TypeScript and provides type safety for all style properties and shorthands. Most of the style properties are connected to either the native CSS properties or their respective token value defined as defined in the `theme` object.
+Panda is built with TypeScript and provides type safety for all style properties and shorthands. Most of the style
+properties are connected to either the native CSS properties or their respective token value defined as defined in the
+`theme` object.
 
 ```ts
 import { css } from '../styled-system/css'
@@ -94,17 +101,19 @@ import { css } from '../styled-system/css'
 const styles = css({ bg: '|' })
 ```
 
-> You can also enable the `strictTokens: true` setting in the Panda configuration. This allows only token values and prevents the use of custom or raw CSS values.
+> You can also enable the `strictTokens: true` setting in the Panda configuration. This allows only token values and
+> prevents the use of custom or raw CSS values.
 
 - `config.strictTokens` will only affect properties that have config tokens, such as `color`, `bg`, `borderColor`, etc.
-- `config.strictPropertyValues` will throw for properties that do not have config tokens, such as
-  `display`, `content`, `willChange`, etc. when the value is not a predefined CSS value.
+- `config.strictPropertyValues` will throw for properties that do not have config tokens, such as `display`, `content`,
+  `willChange`, etc. when the value is not a predefined CSS value.
 
 > In both cases, you can use the `[xxx]` escape-hatch syntax to use custom or raw CSS values without TypeScript errors.
 
 #### strictTokens
 
-With `config.strictTokens` enabled, you can only use token values in your styles. This prevents the use of custom or raw CSS values.
+With `config.strictTokens` enabled, you can only use token values in your styles. This prevents the use of custom or raw
+CSS values.
 
 ```ts filename="panda.config.ts"
 import { css } from '../styled-system/css'
@@ -117,7 +126,8 @@ css({ fontSize: '[123px]' }) // ✅ Valid, since `[123px]` is using the escape-h
 css({ content: 'abc' }) // ✅ Valid, since `content` isn't bound to a config token
 ```
 
-For one-off styles, you can always use the escape-hatch syntax `[xxx]` to use custom or raw CSS values without TypeScript errors.
+For one-off styles, you can always use the escape-hatch syntax `[xxx]` to use custom or raw CSS values without
+TypeScript errors.
 
 ```ts filename="panda.config.ts"
 import { css } from '../styled-system/css'
@@ -128,7 +138,8 @@ css({ fontSize: '[123px]' }) // ✅ Valid, since `[123px]` is using the escape-h
 
 #### strictPropertyValues
 
-With `config.strictPropertyValues` enabled, you can only use valid CSS values for properties that do have a predefined list of values in your styles. This prevents the use of custom or raw CSS values.
+With `config.strictPropertyValues` enabled, you can only use valid CSS values for properties that do have a predefined
+list of values in your styles. This prevents the use of custom or raw CSS values.
 
 ```ts filename="panda.config.ts"
 css({ display: 'flex' }) // ✅ Valid
@@ -223,7 +234,8 @@ type StrictableProps =
 
 ## Nested Styles
 
-Panda provides different ways of nesting style declarations. You can use the native css nesting syntax, or the built-in pseudo props like `_hover` and `_focus`. Pseudo props are covered more in-depth in the next section.
+Panda provides different ways of nesting style declarations. You can use the native css nesting syntax, or the built-in
+pseudo props like `_hover` and `_focus`. Pseudo props are covered more in-depth in the next section.
 
 ### Native CSS Nesting
 
@@ -255,11 +267,13 @@ You can also target children and siblings using the `&` syntax.
 />
 ```
 
-We recommend not using descendant selectors as they can lead to specificity issues when managing style overrides. Colocating styles directly on the element is the preferred way of writing styles in Panda.
+We recommend not using descendant selectors as they can lead to specificity issues when managing style overrides.
+Colocating styles directly on the element is the preferred way of writing styles in Panda.
 
 ### Using Pseudo Props
 
-Panda provides a set of pseudo props that can be used to create nested styles. The pseudo props are prefixed with an underscore `_` to avoid conflicts with the native pseudo selectors.
+Panda provides a set of pseudo props that can be used to create nested styles. The pseudo props are prefixed with an
+underscore `_` to avoid conflicts with the native pseudo selectors.
 
 For example, to create a hover style, you can use the `_hover` pseudo prop.
 
@@ -278,7 +292,8 @@ For example, to create a hover style, you can use the `_hover` pseudo prop.
 
 ## Global styles
 
-Global styles are useful for applying additional global resets or font faces. Use the `globalCss` property in the `panda.config.ts` file to define global styles.
+Global styles are useful for applying additional global resets or font faces. Use the `globalCss` property in the
+`panda.config.ts` file to define global styles.
 
 Global styles are inserted at the top of the stylesheet and are scoped to the `@layer base` cascade layer.
 
@@ -366,7 +381,8 @@ export default defineConfig({
 
 ### Merging styles
 
-Passing multiple styles to the `css` function will deeply merge the styles, allowing you to override styles in a predictable way.
+Passing multiple styles to the `css` function will deeply merge the styles, allowing you to override styles in a
+predictable way.
 
 ```jsx
 import { css } from '../styled-system/css'
@@ -382,10 +398,7 @@ merged correctly.
 import { css } from '../styled-system/css'
 
 export const Button = ({ css: cssProp = {}, children }) => {
-  const className = css(
-    { display: 'flex', alignItems: 'center', color: 'black' },
-    cssProp
-  )
+  const className = css({ display: 'flex', alignItems: 'center', color: 'black' }, cssProp)
   return <button className={className}>{children}</button>
 }
 ```
@@ -406,8 +419,8 @@ export default function Page() {
 
 ---
 
-You can use this approach as well with the `{cvaFn}.raw`, `{svaFn.raw}` and `{patternFn}.raw` functions, allowing style objects
-to be merged as expected in any situation.
+You can use this approach as well with the `{cvaFn}.raw`, `{svaFn.raw}` and `{patternFn}.raw` functions, allowing style
+objects to be merged as expected in any situation.
 
 **Pattern Example:**
 
@@ -536,7 +549,9 @@ const Card = ({ className, ...props }) => {
 
 ### Hashing
 
-When debugging or previewing DOM elements in the browser, the length of the generated atomic `className` can get quite long, and a bit annoying. If you prefer to have terser classnames, use the `hash` option to enable className and css variable name hashing.
+When debugging or previewing DOM elements in the browser, the length of the generated atomic `className` can get quite
+long, and a bit annoying. If you prefer to have terser classnames, use the `hash` option to enable className and css
+variable name hashing.
 
 ```ts filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
@@ -614,7 +629,8 @@ const styles: SystemStyleObject = {
 
 ## Property conflicts
 
-When you combine shorthand and longhand properties, Panda will resolve the styles in a predictable way. The shorthand property will take precedence over the longhand property.
+When you combine shorthand and longhand properties, Panda will resolve the styles in a predictable way. The shorthand
+property will take precedence over the longhand property.
 
 ```jsx
 import { css } from '../styled-system/css'
@@ -641,13 +657,16 @@ The styles generated at build time will look like this:
 
 ## Global vars
 
-You can use the `globalVars` property to define global [CSS variables](https://developer.mozilla.org/en-US/docs/Web/CSS/--*) or custom CSS [`@property`](https://developer.mozilla.org/en-US/docs/Web/CSS/@property) definitions.
+You can use the `globalVars` property to define global
+[CSS variables](https://developer.mozilla.org/en-US/docs/Web/CSS/--*) or custom CSS
+[`@property`](https://developer.mozilla.org/en-US/docs/Web/CSS/@property) definitions.
 
 Panda will automatically generate the corresponding CSS variables and suggest them in your style objects.
 
 > They will be generated in the [`cssVarRoot`](/docs/references/config#cssvarroot) near your tokens.
 
-This can be especially useful when using a 3rd party library that provides custom CSS variables, like a popper library that exposes a `--popper-reference-width`.
+This can be especially useful when using a 3rd party library that provides custom CSS variables, like a popper library
+that exposes a `--popper-reference-width`.
 
 ```ts filename="panda.config.ts"
 import { defineConfig } from '@pandacss/dev'
