--- a/website/content/docs/theming/layer-styles.mdx
+++ b/website/content/docs/theming/layer-styles.mdx
@@ -1,11 +1,9 @@
 ---
 title: Layer Styles
-description: Layer styles provide a way to create consistent and visually appealing elements. By defining a set of properties and effects, you can easily apply them to various design elements, ensuring visual coherence throughout your design system.
+description: Define reusable container styles properties.
 ---
 
-# Layer Styles
-
-Layer styles provide a way to create consistent and visually appealing elements. By defining a set of properties and effects, you can easily apply them to various design elements, ensuring visual coherence throughout your design system.
+Layer styles provide a way to create consistent and visually appealing elements.
 
 - Color or text color
 - Background color
@@ -53,7 +51,8 @@ export default defineConfig({
 })
 ```
 
-This should automatically update the generated theme the specified `layerStyles`. If this doesn't happen, you can run the `panda codegen` command.
+This should automatically update the generated theme the specified `layerStyles`. If this doesn't happen, you can run
+the `panda codegen` command.
 
 ## Using layer styles
 
@@ -63,10 +62,6 @@ Now we can use `layerStyle` property in our components.
 import { css } from '../styled-system/css'
 
 function App() {
-  return (
-    <div className={css({ layerStyle: 'container' })}>
-      This is inside a container style
-    </div>
-  )
+  return <div className={css({ layerStyle: 'container' })}>This is inside a container style</div>
 }
 ```
