chore: rm patch

--- a/website/content/docs/installation/remix.mdx
+++ b/website/content/docs/installation/remix.mdx
@@ -1,6 +1,6 @@
 ---
 title: Using Remix
-description: Easily use Panda with Remix with our dedicated integration.
+description: How to use Panda with Remix with our dedicated integration.
 ---
 
 This guide will show you how to set up Panda CSS in a Remix project using PostCSS.
@@ -43,7 +43,7 @@ If you don't enter any parameter, the CLI will guide you through the process of 
 
 You will be asked a few questions, answer these as follows:
 
-```
+```sh
 ? Where should we create your new project? test-app
 ? Install dependencies? No
 ```
