fix: hidden toc

--- a/website/content/docs/overview/faq.mdx
+++ b/website/content/docs/overview/faq.mdx
@@ -1,7 +1,6 @@
 ---
 title: Frequently Asked Questions
 description: Frequently asked questions and how to resolve common issues
-layout: none
 ---
 
 ## How does Panda manage style conflicts ?
@@ -130,7 +129,7 @@ This will ensure that the paths are resolved correctly, and HMR works as expecte
 
 ---
 
-### HMR not triggered
+## HMR not triggered
 
 If you are having issues with HMR not being triggered after a `panda.config.ts` change (or one of its
 [dependencies](/docs/references/config#dependencies)), you can manually specify the files that should trigger a rebuild
