--- a/website/content/docs/overview/llms-txt.mdx
+++ b/website/content/docs/overview/llms-txt.mdx
@@ -3,16 +3,14 @@ title: LLMs.txt
 description: Help AI tools understand Panda CSS with LLMs.txt support.
 ---
 
-# LLMs.txt
-
 ## What is LLMs.txt?
 
-We support [LLMs.txt](https://llmstxt.org/) files for making the Panda CSS documentation available to large language
-models (LLMs). This feature helps AI tools better understand our styling engine, its APIs, and usage patterns.
+[LLMs.txt](https://llmstxt.org/) files are used to provide the Panda CSS documentation to large language models (LLMs).
+This helps AI tools better understand our styling engine, its APIs, and usage patterns.
 
 ## Available Routes
 
-We provide several LLMs.txt routes to help AI tools access our documentation:
+These routes are available to help AI tools access our documentation:
 
 - [/llms.txt](/llms.txt) - Contains a structured overview of all concepts and their documentation links
 - [/llms-full.txt](/llms-full.txt) - Provides comprehensive documentation including implementation details and examples
