--- a/website/content/docs/guides/component-library.mdx
+++ b/website/content/docs/guides/component-library.mdx
@@ -163,9 +163,6 @@ This should look similar to this:
 {
   "name": "@acme-org/styled-system",
   "version": "1.0.0",
-  "devDependencies": {
-    "@pandacss/dev": "^0.27.3"
-  },
   "exports": {
     "./css": {
       "types": "./css/index.d.ts",
@@ -200,6 +197,7 @@ This should look similar to this:
     "./styles.css": "./styles.css"
   },
   "devDependencies": {
+    "@pandacss/dev": "^1.4.2",
     "@types/react": "19.2.2",
     "react": "^19.2.0"
   },
